2012-02-16 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-package-info): Check
	that PACKAGE is not empty string. Add history support.
	(tinydebian-package-info-history): New.
	(tinydebian-bug-report-generic-bts-mail): Add history support.
	Add PACKAGE name to the subject by default. Add history
	support. Add "tags: patch" if subject contains word patch.
	(tinydebian--bug-report-generic-bts-mail-history): New.
	(tinydebian--bug-report-debian-bts-mail-subject-history): New.

2012-02-08 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-header-not-matches):
	Preserve order
	(tinydebian-mail-mode-debian-address-bug-toggle): Add
	current-prefix-arg to ask bug number. Support multiple
	bug addresses.
	(tinydebian-bug-nbr-string): Correct URL matching regexp.

2012-01-26 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-system-info-apt-policy):
	Check against null relassoc.
	(tinydebian-bug-system-info-depends): Try also fields
	Description-en1, Description-en.

	* tiny/tinylisp.el (tinylisp--menu-info): Correct docstring.
	Order entries alphabetically.

2012-01-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-get-symbol): Delete newlines.
	(tinylisp--regexp-function): Allow whitespace at the beginning.
	(tinylisp-jump-to-definition): Allow whitespace at the beginning
	of variable `f-re'.

2012-01-05 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el: REMOVED FROM THIS PROJECT. Now
	a separate project. See http://www.emacswiki.org/emacs/TinyTools

	* tiny/tinybuffer.el
	(top level): Fix header area to be more compliant.
	No more depend in tinylib. Drop XEmacs support.
	(tinybuffer-start-list): Remove `union'.
	(tinybuffer-nconc): New.
	(tinybuffer-read-char): New.
	(tinybuffer-char-in-list-case): New.

	* tiny/tinylibb.el (radix): Remove quote from `lambda'.
	(require): Add `cl' during compile.

2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>
